[metadata]
name = http_request_codegen
version = 0.0.7
description = Multilanguage HTTP requests code generator.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mondeja/http-request-codegen
author = Álvaro Mondéjar Rubio
author_email = mondejar1994@gmail.com
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Documentation
    Topic :: Internet
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
packages = http_request_codegen
install_requires =
    faker>=4.0.0
python_requires = >=3.6
include_package_data = True

[options.extras_require]
dev =
    bump2version==1.0.1
    flake8==3.8.4
    flake8-implicit-str-concat==0.2.0
    flake8-print==4.0.0
    flask==1.1.2
    inflection==0.5.1
    isort==5.8.0
    mkdocs==1.1.2
    mkdocs-exclude==1.0.2
    mkdocs-include-markdown-plugin==2.8.0
    mkdocs-material==6.2.5
    mkdocs-minify-plugin==0.4.0
    mkdocs_macros_plugin==0.5.0
    mkdocstrings==0.15.0
    pre-commit==2.9.3
    pytest==6.2.1
    pytest-cov==2.10.1
    requests==2.25.1
    yamllint==1.25.0
doc =
    mkdocs==1.1.2
    mkdocs-exclude==1.0.2
    mkdocs-include-markdown-plugin==2.8.0
    mkdocs-material==6.2.5
    mkdocs-minify-plugin==0.4.0
    mkdocs_macros_plugin==0.5.0
    mkdocstrings==0.15.0
lint =
    flake8==3.8.4
    flake8-implicit-str-concat==0.2.0
    flake8-print==4.0.0
    isort==5.8.0
    yamllint==1.25.0
test =
    flask==1.1.2
    inflection==0.5.1
    pytest==6.2.1
    pytest-cov==2.10.1
    requests==2.25.1

[coverage:report]
exclude_lines =
    if __name__ == .__main__.:

[tool:pytest]
addopts = --doctest-modules http_request_codegen tests

[flake8]
per-file-ignores =
    tests/test_valuer.py: E731

[isort]
lines_after_imports = 2
multi_line_output = 3
line_length = 79
use_parentheses = True
combine_as_imports = True
include_trailing_comma = True
known_tests = tests
sections = STDLIB,THIRDPARTY,FIRSTPARTY,TESTS,LOCALFOLDER
